# rules_sci

./: MODULE.bazel
sci/: sci.bzl
sci/toolchains/: BUILD.bazel  toolchain.bzl
